· fixed issue with DisplayName stored in database · modified Favourites in Profile Page (visible only when at least one saved)

--- a/src/components/profile/profile.styles.scss
+++ b/src/components/profile/profile.styles.scss
@@ -13,6 +13,10 @@
     text-align: center;
   }
 
+  &__main {
+    margin: 1em 0;
+  }
+
   &__wrapper {
     width: 100%;
     margin: 0 auto;
